[package]
name = "things3"
version = "0.0.4"
edition = "2021"
homepage = "https://github.com/gleich/rust-things3"
description = "Intereacting with Things 3"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
osascript = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
